--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,10 +8,14 @@ jobs:
     - uses: actions/setup-python@v5
       with:
         python-version: '3.11'
-    - name: Build
+    - name: Install dependencies
       run: |
-        sudo apt update && sudo apt install -y git zip unzip openjdk-17-jdk autoconf libtool pkg-config zlib1g-dev libncurses5-dev libncursesw5-dev cmake libffi-dev libssl-dev
-        pip install buildozer cython
+        sudo apt update
+        sudo apt install -y git zip unzip openjdk-17-jdk autoconf automake libtool libtool-bin pkg-config zlib1g-dev libncurses5-dev libncursesw5-dev cmake libffi-dev libssl-dev
+        pip install --upgrade pip
+        pip install buildozer cython virtualenv
+    - name: Build APK
+      run: |
         buildozer android debug
     - uses: actions/upload-artifact@v4
       with:
